# Skyrim-Damage-Reduction-Calculator

./: .gitignore  CMakeLists.txt  README.md  README.pt-br.md  README.zh-cn.md
src/: main.c
